<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GetFromServerViaNFC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">450467215046833</string>

    <!-- Main menu strings -->
    <string name="question">Aktuális kérdés</string>
    <string name="exit">Kilépés</string>
    <string name="map">Térkép</string>
    <string name="score">Pontszám</string>
    <string name="toplist">Toplista</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_my_score">Pontszámom</string>
    <string name="NFCicon">NFC icon</string>

    <!-- User score screen strings -->
    <string name="label_userscore_score">&#009;A játékos aktuális pontszáma:&#009;</string>
    <string name="label_userscore_pos">&#009;A játékos helyezése a rangsorban:&#009;</string>
    <string name="back">Vissza</string>
    <string name="title_activity_toplist">Toplista</string>
    <string name="title_activity_display_question">DisplayQuestionActivity</string>

</resources>