<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:background="@drawable/menu_bg"
              android:gravity="center_vertical"
              android:orientation="vertical" >
	
    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/NFCicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity=""
        android:src="@drawable/nfc_modd" />
    
    	<TextView
        android:id="@+id/welcomeText"
        android:textAppearance="@style/TextsMenuWelcome"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
   	   <!--Button android:id="@+id/button_question"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/menu_bg_new"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextsMenu"
            android:text="@string/question" /-->
   	   <Button android:id="@+id/button_map"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/menu_bg_new"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextsMenu"
            android:text="@string/map" />
   	   <Button android:id="@+id/button_score"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/menu_bg_new"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextsMenu"
            android:text="@string/score" />
   	   <Button android:id="@+id/button_toplist"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/menu_bg_new"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextsMenu"
            android:text="@string/toplist" />
       <Button android:id="@+id/button_exit"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/menu_bg_new"
            android:layout_gravity="center"
            android:textAppearance="@style/TextsMenu"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
       
</LinearLayout>