<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:background="@drawable/menu_bg_new"
    android:orientation="vertical"
    android:layout_height="wrap_content" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_userscore_score"
        tools:context=".HelpActivity" />
    
    <TextView
        android:id="@+id/uscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".HelpActivity" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_userscore_pos"
        tools:context=".HelpActivity" />
    
    <TextView
        android:id="@+id/upos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".HelpActivity" />
    
    <Button android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/menu_bg_new"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextsMenu"
            android:text="@string/back" />

</LinearLayout>